# ndastro-api

./: .gitignore  .pylintrc  I18N_IMPLEMENTATION_GUIDE.md  README.md  alembic.ini  build.sh  pyproject.toml
.github/workflows/: main_ndastro.yml
docs/: DEPLOYMENT_TRANSLATION_FIX.md  LOCALE_TRANSLATIONS_COMPLETE.md
ndastro_api/: crud.py  db_migrator.py  email_helper.py  gunicorn.conf.py  initial_data.py  main.py  models.py  pre_start.py  tests_pre_start.py
ndastro_api/alembic/: env.py
ndastro_api/alembic/versions/: 2025_07_14_1910-7506c7c231c5_initial_structures.py  2025_07_20_0900-4118260a6c95_added_is_active.py  22ca06f42a73_initial_structures.py
ndastro_api/api/: deps.py  router.py
ndastro_api/api/routes/: astro.py  login.py  private.py  users.py  usersettings.py  utils.py
ndastro_api/api/v1/: astro.py  health.py  login.py  logout.py  routes.py  tier.py  tiers.py  users.py
ndastro_api/core/: babel_i18n.py  config.py  constants.py  db.py  exceptions.py  i18n_messages.py  logger.py  schemas.py  security.py  setup.py
ndastro_api/core/db/: crud_token_blacklist.py  database.py  models.py  token_blacklist.py
ndastro_api/core/enums/: house_enum.py  nakshatra_enum.py  rasi_enum.py
ndastro_api/core/exceptions/: app_exceptions.py  cache_exceptions.py  http_exceptions.py
ndastro_api/core/models/: kattam.py  planet_position.py
ndastro_api/crud/: tier.py  users.py
ndastro_api/locales/en/LC_MESSAGES/: messages.mo  messages.po
ndastro_api/locales/ta/LC_MESSAGES/: messages.mo  messages.po
ndastro_api/middlewares/: client_cache.py  i18n.py  monitoring.py
ndastro_api/models/: tier.py  user.py
ndastro_api/schemas/: pagination.py  tier.py  user.py
ndastro_api/services/: ayanamsa.py  chart_utils.py  kattams.py  position.py  retrograde.py  users.py  utils.py
ndastro_api/tests/: conftest.py
ndastro_api/tests/api/routes/: test_login.py  test_private.py  test_users.py
ndastro_api/tests/crud/: test_user.py
ndastro_api/tests/scripts/: test_pre_start.py  test_tests_pre_start.py
ndastro_api/tests/utils/: user.py  utils.py
scripts/: format.sh  lint.sh  test.sh
